--- a/core-web-vitals/package.json
+++ b/core-web-vitals/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "my-react-app",
+  "name": "core-web-vitals",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arco-design/web-react": "^2.37.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
