--- a/core-web-vitals/package.json
+++ b/core-web-vitals/package.json
@@ -2,6 +2,7 @@
   "name": "core-web-vitals",
   "version": "0.1.0",
   "private": true,
+  "homepage" : ".",
   "dependencies": {
     "@arco-design/web-react": "^2.37.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -37,4 +38,6 @@
       "last 1 safari version"
     ]
   }
+
+
 }
